opam-version: "1.2"
name: "tjr_mem_queue"

version: "0.0.1"

maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_mem_queue"
bug-reports: "https://github.com/tomjridge/tjr_mem_queue/issues"
dev-repo: "https://github.com/tomjridge/tjr_mem_queue.git"

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "tjr_lib"
  "unix"
  "threads"
]

