opam-version: "2.0"
name: "tjr_mem_queue"
version: "0.0.1"

# ----------------------------------------------------------------------

maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_mem_queue"
bug-reports: "https://github.com/tomjridge/tjr_mem_queue/issues"
# dev-repo: "https://github.com/tomjridge/tjr_mem_queue.git"

# ----------------------------------------------------------------------

depends: [
  "lwt"
  "tjr_monad"
]

# lwt.unix is an ocamlfind package; depends are opam packages?

# ----------------------------------------------------------------------

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

